crates/bevy_markdown/src/snapshots/bevy_markdown__tests__test_render_text_style_header.snap
---
source: crates/bevy_markdown/src/lib.rs
expression: "generate_markdown_lines(BevyMarkdown {\n        markdown_theme,\n        text: input.clone(),\n        attrs: AttrsOwned::new(Attrs::new()),\n    })"
---
Ok(
    BevyMarkdownLines {
        lines: [
            [],
            [
                (
                    "Header 1",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 1,
                    },
                ),
            ],
            [
                (
                    "Header 2",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 3,
                    },
                ),
            ],
            [
                (
                    "Header 3",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 5,
                    },
                ),
            ],
            [
                (
                    "Some header 4 ",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 7,
                    },
                ),
                (
                    "as well",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Italic,
                        weight: Weight(
                            700,
                        ),
                        metadata: 8,
                    },
                ),
                (
                    " italicised",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 9,
                    },
                ),
            ],
            [
                (
                    "another header ",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 11,
                    },
                ),
                (
                    "redirecting to google",
                    AttrsOwned {
                        color_opt: Some(
                            Color(
                                4278848010,
                            ),
                        ),
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Italic,
                        weight: Weight(
                            700,
                        ),
                        metadata: 12,
                    },
                ),
            ],
        ],
        span_metadata: [
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: Some(
                    "https://google.com",
                ),
            },
        ],
    },
)
