crates/bevy_markdown/src/snapshots/bevy_markdown__tests__test_render_text_style_header_node.snap
---
source: crates/bevy_markdown/src/lib.rs
expression: node.clone()
---
Text {
    sections: [
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Header 1",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 30.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Header 2",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 27.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Header 3",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 24.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Some header 4 ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 21.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "as well",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 21.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " italicised",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 21.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "another header ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "redirecting to google",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 1.0,
                    alpha: 1.0,
                },
            },
        },
    ],
    alignment: Left,
    linebreak_behaviour: WordBoundary,
}
